--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,5 +22,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".home.ProfileBaseInfomation" />
+        <activity android:name=".home.ProfileSwipeActivity" />
+        <activity android:name=".home.OriginDetailActivity" />
     </application>
 </manifest>
