--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:networkSecurityConfig="@xml/network_security_config">
-        <activity android:name=".MainActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".home.ProfileBaseInfomation" />
         <activity android:name=".home.ProfileSwipeActivity" />
         <activity android:name=".home.OriginDetailActivity" />
         <activity android:name=".discover.HotWeiBoSwipeActivity" />
         <activity android:name=".message.MentionSwipeActivity" />
+        <activity android:name=".LoginActivity"
+            android:theme="@style/AppTheme.NoBar">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".postweibo.PostActivity" />
     </application>
 </manifest>
