--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,16 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'armeabi-v7a', 'arm64-v8a' //根据需求自己修改
+            universalApk true
+        }
+    }
 }
+
 
 configurations {
     all*.exclude group: 'com.google.android', module: 'support-v4'
@@ -45,4 +54,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     implementation 'com.lzy.widget:ninegridview:0.2.0'
+    implementation 'com.sina.weibo.sdk:core:4.3.6:openDefaultRelease@aar'
 }
